--- a/demo/index.html
+++ b/demo/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<base href="/demo/" />
 		<meta charset="utf8">
-		<title>Demo</title>
+		<title>frameworkless-view: Demo</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<link rel="stylesheet" type="text/css" href="//yui.yahooapis.com/pure/0.4.2/pure-min.css">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
 	</head>
 	<body>
 		<div id="layout">
